--- a/Spec.Sniffer/MainWindow.xaml
+++ b/Spec.Sniffer/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Spec.Sniffer"
         xmlns:viewModel="clr-namespace:Spec.Sniffer.ViewModel" x:Class="Spec.Sniffer.MainWindow"
         mc:Ignorable="d"
-        Title="Spec.Sniffer V0.0.1" Height="720" Width="1280" WindowStartupLocation="CenterScreen"  ResizeMode="CanResizeWithGrip" >
+        Title="Spec.Sniffer V0.0.1" Height="720" Width="1100" WindowStartupLocation="CenterScreen"  ResizeMode="CanResizeWithGrip" >
 
     <Window.Resources>
 
@@ -99,7 +99,7 @@
 
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition Width="4*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
@@ -108,7 +108,7 @@
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="4*"/>
+                                <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
 
 
@@ -173,11 +173,9 @@
 
                             <Grid Grid.Column="1">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
+                                    <RowDefinition Height="173*"/>
+                                    <RowDefinition Height="116*"/>
                                 </Grid.RowDefinitions>
-
-
 
                                 <Grid Grid.Row="0">
                                     <Grid.RowDefinitions>
@@ -186,15 +184,109 @@
                                     </Grid.RowDefinitions>
 
                                     <Border  x:Name="StatusBorder"
-                                             Grid.Row="0"
-                                             Style="{StaticResource TabItemBorder}">
+                                             Grid.Row="0">
 
-                                        <Label Content="Device Status" FontSize="22"></Label>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <Border x:Name="NetworkBorder"
+                                                    Grid.Column="0"
+                                                    Style="{StaticResource TabItemBorder}">
+
+
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                    </Grid.RowDefinitions>
+
+                                                        <Label Content="Network"
+                                                               Grid.Row="0"
+                                                               Style="{StaticResource HeaderLabel}"
+                                                               HorizontalAlignment="Left"
+                                                               Margin="5,0,0,0"/>
+
+
+                                                        <StackPanel Grid.Row="1"
+                                                            Orientation="Horizontal">
+                                                            <Image Source="pack://siteoforigin:,,,/Resources/network.png"
+                                                                   Style="{StaticResource HeaderImage}" Margin="10,0"
+                                                                   Width="25"/>
+                                                            <Label Content="Connected"/>
+                                                        </StackPanel>
+                                                        
+                                                        <StackPanel Grid.Row="2"
+                                                                    Orientation="Horizontal">
+                                                            <Image Source="pack://siteoforigin:,,,/Resources/Ethernet.png"
+                                                                   Style="{StaticResource HeaderImage}" Margin="10,0"
+                                                                   Width="25"/>
+                                                            <Label Content="Connected"/>
+                                                        </StackPanel>
+                                                        <StackPanel Grid.Row="3"
+                                                                    Orientation="Horizontal">
+                                                            <Image Source="pack://siteoforigin:,,,/Resources/Wifi.png"
+                                                                   Style="{StaticResource HeaderImage}" Margin="10,0"
+                                                                   Width="25"/>
+                                                            <Label Content="Connected"/>
+                                                        </StackPanel>
+
+                                                </Grid>
+                                                
+                                            </Border>
+
+                                            <Border x:Name="HddBorder"
+                                                    Grid.Column="1"
+                                                    Style="{StaticResource TabItemBorder}">
+
+
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                        <RowDefinition Height="40"/>
+                                                    </Grid.RowDefinitions>
+
+                                                        <Label Content="Storage"
+                                                               Grid.Row="0"
+                                                               Style="{StaticResource HeaderLabel}"
+                                                               HorizontalAlignment="Left"
+                                                               Margin="5,0,0,0"/>
+
+
+                                                        <StackPanel Grid.Row="1"
+                                                            Orientation="Horizontal">
+                                                            <Image Source="pack://siteoforigin:,,,/Resources/network.png"
+                                                                   Style="{StaticResource HeaderImage}" Margin="10,0"
+                                                                   Width="25"/>
+                                                            <Label Content="Connected"/>
+                                                        </StackPanel>
+                                                        
+                                                        <StackPanel Grid.Row="2"
+                                                                    Orientation="Horizontal">
+                                                            <Image Source="pack://siteoforigin:,,,/Resources/Ethernet.png"
+                                                                   Style="{StaticResource HeaderImage}" Margin="10,0"
+                                                                   Width="25"/>
+                                                            <Label Content="Connected"/>
+                                                        </StackPanel>
+
+
+                                                </Grid>
+                                                
+                                            </Border>
+
+                                        </Grid>
+
                                     </Border>
+
 
                                     <Border  x:Name="BatteryBorder"
                                              Grid.Row="1">
-
 
                                         <Grid>
                                             <Grid.ColumnDefinitions>
@@ -218,8 +310,7 @@
                                                                 </TransformGroup>
                                                             </Image.RenderTransform>
                                                         </Image>
-                                                        <Label Content="Main Battery"
-                                                               Style="{StaticResource HeaderLabel}"/>
+
                                                         <Label Content="{Binding Batteries.BatteryList[0].Health}"
                                                                Style="{StaticResource HeaderLabel}"
                                                                HorizontalAlignment="Left"/>
@@ -235,7 +326,7 @@
                                                         </Grid.RowDefinitions>
                                                         <Grid.ColumnDefinitions>
                                                             <ColumnDefinition Width="*"/>
-                                                            <ColumnDefinition Width="5*"/>
+                                                            <ColumnDefinition Width="3*"/>
                                                         </Grid.ColumnDefinitions>
 
                                                         <Label Content="Name:"
@@ -286,8 +377,7 @@
                                                                 </TransformGroup>
                                                             </Image.RenderTransform>
                                                         </Image>
-                                                        <Label Content="Secondary Battery"
-                                                               Style="{StaticResource HeaderLabel}"/>
+
                                                         <Label Content="{Binding Batteries.BatteryList[1].Health}"
                                                                Style="{StaticResource HeaderLabel}"
                                                                HorizontalAlignment="Left"/>
@@ -303,7 +393,7 @@
                                                         </Grid.RowDefinitions>
                                                         <Grid.ColumnDefinitions>
                                                             <ColumnDefinition Width="*"/>
-                                                            <ColumnDefinition Width="5*"/>
+                                                            <ColumnDefinition Width="3*"/>
                                                         </Grid.ColumnDefinitions>
 
                                                         <Label Content="Name:"
